# iNode-VPN

./: .gitignore  CMakeLists.txt  README.md  SID_name_versions.txt  captcha_lab.py
.github/workflows/: ci.yml  release.yml
backends/h3csvpn/: LICENSE.MIT  README.md  captcha.py  cli.py  config.py  httpclient.py  pyproject.toml  requirements-dev.txt  session.py  tunnel.py  vnic.py
docs/: CAPTCHA.md  INTEROP.md  PROTOCOL.md  REVIEW.md
mock/: mock_gateway.py
re/findings/: control.md  crypto.md  docs.md  http.md  service.md  spa.md  tunnel.md
scripts/: inode-dot1x-helper  inode-ipcfg-helper  inode-l2tp-helper
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/core/: AutoReconnect.cpp  AutoReconnect.h  ConnectionStats.h  CredentialStore.cpp  CredentialStore.h  CustomXmlImporter.cpp  CustomXmlImporter.h  Dhcp.cpp  Dhcp.h  InterfaceDiscovery.cpp  InterfaceDiscovery.h  IpConfigurator.cpp  IpConfigurator.h  LogFile.cpp  LogFile.h  Logger.cpp  Logger.h  NetUtil.cpp  NetUtil.h  Profile.cpp  Profile.h  ProfileStore.cpp  ProfileStore.h  Protocol.cpp  Protocol.h  ProtocolFactory.cpp  ProtocolFactory.h  SecretServiceStore.cpp  SecretServiceStore.h  Settings.cpp  Settings.h
src/protocols/: Dot1xProtocol.cpp  Dot1xProtocol.h  EadProtocol.cpp  EadProtocol.h  L2tpIpsecProtocol.cpp  L2tpIpsecProtocol.h  PortalProtocol.cpp  PortalProtocol.h  SslVpnProtocol.cpp  SslVpnProtocol.h  WlanProtocol.cpp  WlanProtocol.h
src/resources/: org.inode.ClientQt.desktop  org.inode.ClientQt.policy  resources.qrc
src/resources/themes/: areo.qss  brightness.qss  mullvad.qss  star.qss
src/ui/: ConnectionPanel.cpp  ConnectionPanel.h  LogPane.cpp  LogPane.h  ProfileEditor.cpp  ProfileEditor.h  ProfileListDelegate.cpp  ProfileListDelegate.h  SettingsDialog.cpp  SettingsDialog.h  StatsPane.cpp  StatsPane.h  ThemeManager.cpp  ThemeManager.h  TrayIcon.cpp  TrayIcon.h
tests/: conftest.py  test_crypto_framing.py  test_e2e_mock.py  test_live_gateway.py  test_protocol.py  test_tunnel_preamble.py
